kubernetes/ntfy/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: my-ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
    - host: ntfy.local.127.0.0.1.sslip.io #select own
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  ntfy
                port:
                  number: 80
  tls: []
